# --------------------------------------------------------------
#  build 'lfs' module
# --------------------------------------------------------------
set(MODULE_NAME lfs)

# --------------------------------------------------------------
#  lfs
# --------------------------------------------------------------
add_custom_target(${MODULE_NAME} true)

# --------------------------------------------------------------
#  lfs/vendor.so
# --------------------------------------------------------------
add_subdirectory(vendor)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lubyk
  DESTINATION lib
)                                  

