cmake_minimum_required(VERSION 3.12)
# --------------------------------------------------------------
#  build 'lfs' module
# --------------------------------------------------------------
set(MODULE_NAME lfs)

# --------------------------------------------------------------
#  lfs
# --------------------------------------------------------------
add_custom_target(${MODULE_NAME} true)

# --------------------------------------------------------------
#  lfs/vendor.so
# --------------------------------------------------------------
add_subdirectory(vendor)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
#install(DIRECTORY lib
#  DESTINATION ${LUBYK_LIB}
#)

